<resources>
    <string name="app_name">FTGrocery</string>
    <string name="login">Login</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="add_stock">Add Stock</string>
    <string name="sales">Sales</string>
    <string name="purchase">Purchase</string>
    <string name="search_stock">Search Stock</string>
    <string name="search">Search</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="signup">Sign Up</string>
    <string name="list_stock">List Stock</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Item Name</string>
    <string name="qty_in_stock">Qty In Stock</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="taxable">Taxable</string>
    <string name="non_taxable">Non Taxable</string>
    <string name="is_product_taxable">Is product taxable?</string>
    <string name="item_code">Item Code</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_email">Customer Email</string>
    <string name="quantity_sold">Quantity Sold</string>
    <string name="date_of_sales">Date of Sales</string>
    <string name="quantity_purchased">Quantity Purchased</string>
    <string name="date_of_purchase">Date of Purchase</string>
    <string name="list_items">List Items</string>
    <string name="search_item">Search Item</string>
</resources>